# docs/openapi.yaml
@@ -162,7 +162,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/UserStoryResponse"
         '404':
-          description: Not found
+          description: Session or user story not found
     delete:
       operationId: deleteUserStory
       tags:
@@ -195,28 +195,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UserStoryStatus"
-  /sessions/{sessionId}/stories/{userStoryId}/stop:
-    parameters:
-      - name: sessionId
-        in: path
-        required: true
-        schema:
-          type: string
-      - name: userStoryId
-        in: path
-        required: true
-        schema:
-          type: string
-    put:
-      operationId: stopVoting
-      tags:
-        - votes
-      responses:
-        '202':
-          description: Accepted
-        '404':
-          description: Session or user story not found
-  /sessions/{sessionId}/users/{userId}/vote:
+  /sessions/{sessionId}/users/{userId}/votes:
     parameters:
       - name: sessionId
         in: path
@@ -231,7 +210,7 @@ paths:
     post:
       operationId: vote
       tags:
-        - users
+        - votes
       requestBody:
         content:
           application/json:
