# src/main/java/com/igornaumov/poker/planning/controller/VotesController.java
@@ -1,7 +1,5 @@
 package com.igornaumov.poker.planning.controller;
 
-import static com.igornaumov.model.UserStoryStatus.StatusEnum.VOTED;
-
 import java.util.Optional;
 
 import org.springframework.http.HttpStatus;
@@ -9,32 +7,33 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.igornaumov.controller.VotesApi;
+import com.igornaumov.model.VoteRequest;
 import com.igornaumov.poker.planning.entity.SessionEntity;
-import com.igornaumov.poker.planning.entity.UserStoryEntity;
+import com.igornaumov.poker.planning.entity.VoteEntity;
 import com.igornaumov.poker.planning.repository.SessionRepository;
-import com.igornaumov.poker.planning.repository.UserStoryRepository;
+import com.igornaumov.poker.planning.repository.VotesRepository;
 
 @RestController
 public class VotesController implements VotesApi {
 
     private final SessionRepository sessionRepository;
-    private final UserStoryRepository userStoryRepository;
+    private final VotesRepository votesRepository;
 
-    public VotesController(SessionRepository sessionRepository, UserStoryRepository userStoryRepository) {
+    public VotesController(SessionRepository sessionRepository, VotesRepository votesRepository) {
         this.sessionRepository = sessionRepository;
-        this.userStoryRepository = userStoryRepository;
+        this.votesRepository = votesRepository;
     }
 
     @Override
-    public ResponseEntity<Void> stopVoting(String sessionId, String userStoryId) {
+    public ResponseEntity<Void> vote(String sessionId, String userId, VoteRequest voteRequest) {
         Optional<SessionEntity> sessionOptional = sessionRepository.findById(sessionId);
-        return sessionOptional
-            .map(session -> {
-                Optional<UserStoryEntity> userStoryOptional = userStoryRepository.findById(userStoryId);
-                userStoryOptional.ifPresent(entity -> entity.setUserStoryStatus(VOTED));
-                return new ResponseEntity<Void>(HttpStatus.ACCEPTED);
-            })
-            .orElse(new ResponseEntity<Void>(HttpStatus.NOT_FOUND));
+        if (sessionOptional.isEmpty()) {
+            return ResponseEntity
+                .status(HttpStatus.NOT_FOUND)
+                .build();
+        }
+        votesRepository.save(new VoteEntity(userId, voteRequest.getUserStoryId(), voteRequest.getValue(), sessionId));
+        return new ResponseEntity<Void>(HttpStatus.ACCEPTED);
     }
 
 }
